Remote Control napojuje mezi sebou Spectoda.js


Spectoda.js -> SpectodaController.js 


Funkce SpectodaConnectu presunuty do spectoda-connect/index.ts

TODO
hideHomeButton(), setOrientation(option) Presunuto to spectoda-connect/index.ts, kde je potreba tyto funkce ozivit aby fungovaly